Bug 1063547 - Return no available devices where not supported, disable on Android. r=jesup, a=bajaj